// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataClassPropertiesPanel custom properties 1`] = `
<div
  className="domain-form-panel lk-border-theme-light panel panel-default"
>
  <div
    className="domain-panel-header domain-panel-header-expanded labkey-page-nav panel-heading"
    id="dataclass-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-status-icon"
    >
      <span
        className="fa fa-check-circle"
      />
    </span>
    <span
      className="domain-panel-title"
    >
      Source Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="margin-bottom row"
    >
      <div
        className="col-xs-9"
      >
        <div
          className="entity-form--headerhelp"
        >
          header text test
        </div>
      </div>
      <div
        className="col-xs-3"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createDataClass"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about designing sources
            </a>
          </div>
        </div>
      </div>
    </div>
    <form
      className=""
    >
      <div
        className="margin-bottom margin-top row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this source"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <span
                className="label-help-icon fa fa-question-circle"
              />
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control textarea-noresize"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="name-expression-label-div"
            onMouseEnter={[Function]}
          >
            Naming 
            <span
              className="domain-no-wrap"
            >
              Pattern
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
              
            </span>
          </div>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="name expression placeholder test"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataClassPropertiesPanel default properties 1`] = `
<div
  className="domain-form-panel domain-panel-no-theme panel panel-default"
>
  <div
    className="domain-panel-header domain-panel-header-expanded domain-panel-header-no-theme panel-heading"
    id="dataclass-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Data Class Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="margin-bottom row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createDataClass"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about designing data classes
            </a>
          </div>
        </div>
      </div>
    </div>
    <form
      className=""
    >
      <div
        className="margin-bottom margin-top row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this data class"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <span
                className="label-help-icon fa fa-question-circle"
              />
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control textarea-noresize"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="name-expression-label-div"
            onMouseEnter={[Function]}
          >
            Naming 
            <span
              className="domain-no-wrap"
            >
              Pattern
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
              
            </span>
          </div>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., DC-\${now:date}-\${genId})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      >
        <span
          className="domain-no-wrap"
        >
          Category
          
        </span>
      </div>
      <div
        className="col-xs-10"
      >
        <div
          className="select-input-container form-group row"
        >
          <div
            className="col-sm-9 col-xs-12"
          >
            <div
              className="select-input select-input--is-disabled css-14jk2my-container"
              id="selectinput-0"
              onKeyDown={[Function]}
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                className="css-1f43avz-a11yText-A11yText"
              />
              <div
                className="select-input__control select-input__control--is-disabled css-1e0cv1x-control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="select-input__value-container css-g1d714-ValueContainer"
                >
                  <div
                    className="select-input__placeholder css-eaf7xa-placeholder"
                  >
                    Loading...
                  </div>
                  <div
                    className="css-1bwsx9e-Input"
                  >
                    <div
                      className="select-input__input"
                      style={
                        {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-autocomplete="list"
                        autoCapitalize="none"
                        autoComplete="off"
                        autoCorrect="off"
                        disabled={true}
                        id="react-select-2-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        spellCheck="false"
                        style={
                          {
                            "background": 0,
                            "border": 0,
                            "boxSizing": "content-box",
                            "color": "inherit",
                            "fontSize": "inherit",
                            "label": "input",
                            "opacity": 1,
                            "outline": 0,
                            "padding": 0,
                            "width": "1px",
                          }
                        }
                        tabIndex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style={
                          {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="select-input__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    className="select-input__indicator-separator css-109onse-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className="select-input__indicator select-input__dropdown-indicator css-tlfecz-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="css-tj5bde-Svg"
                      focusable="false"
                      height={20}
                      viewBox="0 0 20 20"
                      width={20}
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      >
        Sample 
        <span
          className="domain-no-wrap"
        >
          Type
          <span
            className="label-help-target"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <span
              className="label-help-icon fa fa-question-circle"
            />
          </span>
          
        </span>
      </div>
      <div
        className="col-xs-10"
      >
        <div
          className="select-input-container form-group row"
        >
          <div
            className="col-sm-9 col-xs-12"
          >
            <div
              className="select-input select-input--is-disabled css-14jk2my-container"
              id="selectinput-1"
              onKeyDown={[Function]}
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                className="css-1f43avz-a11yText-A11yText"
              />
              <div
                className="select-input__control select-input__control--is-disabled css-1e0cv1x-control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="select-input__value-container css-g1d714-ValueContainer"
                >
                  <div
                    className="select-input__placeholder css-eaf7xa-placeholder"
                  >
                    Loading...
                  </div>
                  <div
                    className="css-1bwsx9e-Input"
                  >
                    <div
                      className="select-input__input"
                      style={
                        {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-autocomplete="list"
                        autoCapitalize="none"
                        autoComplete="off"
                        autoCorrect="off"
                        disabled={true}
                        id="react-select-3-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        spellCheck="false"
                        style={
                          {
                            "background": 0,
                            "border": 0,
                            "boxSizing": "content-box",
                            "color": "inherit",
                            "fontSize": "inherit",
                            "label": "input",
                            "opacity": 1,
                            "outline": 0,
                            "padding": 0,
                            "width": "1px",
                          }
                        }
                        tabIndex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style={
                          {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="select-input__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    className="select-input__indicator-separator css-109onse-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className="select-input__indicator select-input__dropdown-indicator css-tlfecz-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="css-tj5bde-Svg"
                      focusable="false"
                      height={20}
                      viewBox="0 0 20 20"
                      width={20}
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
